--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+        rel="stylesheet">
 
     <!-- daisyui cdn -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.24/dist/full.min.css" rel="stylesheet" type="text/css" />
@@ -21,6 +26,9 @@
         .font-poppins {
             font-family: "Poppins", sans-serif;
         }
+        .font-inter{
+            font-family: "Inter", sans-serif;
+        }
     </style>
     <script>
         tailwind.config = {
@@ -29,7 +37,7 @@
                     colors: {
                         clifford: '#da373d',
                         reddish: '#E76F51',
-                        'hero-bg':' rgba(231, 111, 81, 0.1)',
+                        'hero-bg': ' rgba(231, 111, 81, 0.1)',
                     }
                 }
             }
@@ -39,7 +47,7 @@
 
 <body class="font-poppins">
     <!-- header section  -->
-    <header class="md:container md:mx-auto mx-5">
+    <header class="md:container md:mx-auto mx-5 mb-24">
         <!-- navbar part -->
         <nav>
             <div class="navbar bg-base-100 mb-7">
@@ -70,7 +78,7 @@
                         <li><a>Contact</a></li>
                     </ul>
                 </div>
-                <div class="">
+                <div>
                     <a class="btn bg-reddish text-white">Login</a>
                 </div>
             </div>
@@ -94,7 +102,7 @@
                         </div>
 
                         <!-- image part -->
-                        <div class="flex-1 "> 
+                        <div class="flex-1 ">
                             <img src="./images/slider/bike1.png" class="w-full" />
                         </div>
                     </div>
@@ -111,13 +119,13 @@
                             <h1 class="text-4xl md:text-5xl lg:text-6xl font-bold lg:w-3/4">
                                 Ride-on R15 V4 with Smile
                             </h1>
-                            <p class="lg:text-lg  lg:w-3/4 font-light">Amet minim mollit non deserunt ullamco 
+                            <p class="lg:text-lg  lg:w-3/4 font-light">Amet minim mollit non deserunt ullamco
                                 est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
                             <button class="btn bg-reddish text-white">Purchase</button>
                         </div>
 
                         <!-- image part -->
-                        <div class="flex-1 "> 
+                        <div class="flex-1 ">
                             <img src="./images/slider/bike2.png" class="w-full" />
                         </div>
                     </div>
@@ -134,13 +142,13 @@
                             <h1 class="text-4xl  md:text-5xl lg:text-6xl font-bold lg:w-3/4">
                                 Ride-on R15 V4 with Smile
                             </h1>
-                            <p class="lg:text-lg  lg:w-3/4 font-light">Amet minim mollit non deserunt ullamco 
+                            <p class="lg:text-lg  lg:w-3/4 font-light">Amet minim mollit non deserunt ullamco
                                 est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
                             <button class="btn bg-reddish text-white">Purchase</button>
                         </div>
 
                         <!-- image part -->
-                        <div class="flex-1 "> 
+                        <div class="flex-1 ">
                             <img src="./images/slider/bike3.png" class="w-full" />
                         </div>
                     </div>
@@ -154,10 +162,254 @@
     </header>
 
     <!-- main section  -->
-    <main class="md:container md:mx-auto"></main>
+    <main class="mx-5 md:container md:mx-auto">
+
+        <!--bike grid show -->
+        <section class="mb-24">
+            <h2 class="md:text-5xl text-3xl font-bold text-center mb-4">Fetured Bikes In This Year</h2>
+            <h5 class="text-reddish text-center font-semibold">Best bike collection</h5>
+            <hr class=" border-reddish w-16 mx-auto">
+
+            <!-- image grid -->
+            <div class="grid md:grid-cols-3 mt-16 justify-centers gap-20 md:gap-0">
+                <img class="mx-auto grayscale" src="./images/others/feature-bike.png" alt="">
+                <img class="mx-auto" src="./images/others/feature-bike.png" alt="">
+                <img class="mx-auto grayscale" src="./images/others/feature-bike.png" alt="">
+            </div>
+        </section>
+
+        <!-- news card section -->
+        <section class="mb-24">
+            <h2 class="md:text-5xl text-3xl font-bold text-center mb-10">Latest News</h2>
+
+            <!-- bike cards -->
+            <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-10">
+
+                <!-- card-1 -->
+                <div class="card bg-base-100 border">
+                    <figure>
+                        <img class="p-5 lg:mt-10" src="./images/others/latest1.png" alt="Bikes" />
+                    </figure>
+                    <div class="card-body space-y-5">
+                        <h2 class="card-title">Ducati XDIAVEL S-73</h2>
+                        <p class="text-gray-500">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus,
+                            fermentum amet faucibus sed
+                            id nisi lectus at.</p>
+                        <div class="card-actions">
+                            <button class="btn bg-reddish text-white">Read More</button>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- card-2 -->
+                <div class="card bg-base-100 border">
+                    <figure>
+                        <img class="p-5 lg:mt-10" src="./images/others/latest2.png" alt="Bikes" />
+                    </figure>
+                    <div class="card-body space-y-5">
+                        <h2 class="card-title">Ducati XDIAVEL S-73</h2>
+                        <p class="text-gray-500">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus,
+                            fermentum amet faucibus sed
+                            id nisi lectus at.</p>
+                        <div class="card-actions">
+                            <button class="btn bg-reddish text-white">Read More</button>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- card-3 -->
+                <div class="card bg-base-100 border">
+                    <figure>
+                        <img class="p-5 lg:mt-10" src="./images/others/latest3.png" alt="Bikes" />
+                    </figure>
+                    <div class="card-body space-y-5 ">
+                        <h2 class="card-title">Ducati XDIAVEL S-73</h2>
+                        <p class="text-gray-500">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus,
+                            fermentum amet faucibus sed
+                            id nisi lectus at.</p>
+                        <div class="card-actions">
+                            <button class="btn bg-reddish text-white">Read More</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- clients comments -->
+        <section class="mb-24">
+            <h2 class="md:text-5xl text-3xl font-bold text-center mb-10">Happy <span class="text-reddish">Clients
+                    says</span></h2>
+
+            <!-- star cards -->
+            <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-10">
+
+                <!-- card-1 -->
+                <div class="card bg-base-100 border px-8 py-10">
+                    <figure>
+                        <div class="avatar">
+                            <div class="w-40 rounded-full">
+                                <img src="./images/others/user-1.png" />
+                            </div>
+                    </figure>
+                    <div class="card-body items-center text-center space-y-3">
+                        <p class="text-gray-500">Slate helps you see how
+                            many more days you need
+                            to work to reach your financial
+                            goal for the month and year.</p>
+                        <div class="rating">
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400"
+                                checked="checked" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        </div>
+                        <h5 class="text-sm text-sky-500 font-semibold">Regina Miles</h5>
+                        <p class="text-sm font-semibold">Banker</p>
+                    </div>
+                </div>
+                <!-- card-2 -->
+                <div class="card bg-base-100 border px-8 py-10">
+                    <figure>
+                        <div class="avatar">
+                            <div class="w-40 rounded-full">
+                                <img src="./images/others/user-2.png" />
+                            </div>
+                    </figure>
+                    <div class="card-body items-center text-center space-y-3">
+                        <p class="text-gray-500">Slate helps you see how
+                            many more days you need
+                            to work to reach your financial
+                            goal for the month and year.</p>
+                        <div class="rating">
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400"
+                                checked="checked" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        </div>
+                        <h5 class="text-sm text-sky-500 font-semibold">Regina Miles</h5>
+                        <p class="text-sm font-semibold">Banker</p>
+                    </div>
+                </div>
+                <!-- card-3 -->
+                <div class="card bg-base-100 border px-8 py-10">
+                    <figure>
+                        <div class="avatar">
+                            <div class="w-40 rounded-full">
+                                <img src="./images/others/user-3.png" />
+                            </div>
+                    </figure>
+                    <div class="card-body items-center text-center space-y-3">
+                        <p class="text-gray-500">Slate helps you see how
+                            many more days you need
+                            to work to reach your financial
+                            goal for the month and year.</p>
+                        <div class="rating">
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400"
+                                checked="checked" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        </div>
+                        <h5 class="text-sm text-sky-500 font-semibold">Regina Miles</h5>
+                        <p class="text-sm font-semibold">Banker</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- FAQ section -->
+        <section class="mb-24">
+            <h2 class="md:text-5xl text-3xl font-bold text-center mb-10">Frequently Asked<span
+                    class="text-reddish">Questions</span></h2>
+
+
+            <div class="hero font-inter">
+
+                <div class="hero-content flex-col md:flex-row gap-20">
+
+                    <!-- image part -->
+                    <img src="./images/others/faq.png"/>
+
+                    <!-- accordion -->
+                    <div class="space-y-5 md:w-1/2">
+                        <div class="collapse collapse-arrow border">
+                            <input type="radio" name="my-accordion-2" checked="checked" />
+                            <div class="collapse-title text-xl font-medium">What are the most important things I should
+                                know about riding a bike?</div>
+                            <div class="collapse-content">
+                                <p class="text-gray-500">Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and
+                                    laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This
+                                    will help you be a more focused and legally compliant bike rider. </p>
+                            </div>
+                        </div>
+                        <div class="collapse collapse-arrow border">
+                            <input type="radio" name="my-accordion-2" />
+                            <div class="collapse-title text-xl font-medium">How can I tell if my helmet is old and I
+                                need a
+                                new one?</div>
+                            <div class="collapse-content">
+                                <p class="text-gray-500">Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and
+                                    laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This
+                                    will help you be a more focused and legally compliant bike rider. </p>
+                            </div>
+                        </div>
+                        <div class="collapse collapse-arrow border">
+                            <input type="radio" name="my-accordion-2" />
+                            <div class="collapse-title text-xl font-medium">My bike has been in storage is it safe to
+                                ride?</div>
+                            <div class="collapse-content">
+                                <p class="text-gray-500">Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and
+                                    laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This
+                                    will help you be a more focused and legally compliant bike rider. </p>
+                            </div>
+                        </div>
+                        <div class="collapse collapse-arrow border">
+                            <input type="radio" name="my-accordion-2" />
+                            <div class="collapse-title text-xl font-medium">What rules should I follow when riding my
+                                bike?</div>
+                            <div class="collapse-content">
+                                <p class="text-gray-500">Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and
+                                    laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This
+                                    will help you be a more focused and legally compliant bike rider. </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 
     <!-- footer section  -->
-    <footer></footer>
+    <footer class="bg-black">
+        <div class="footer text-neutral-content md:container mx-auto px-16 lg:px-32 pt-14 pb-20 justify-between">
+  <aside class="space-y-4">
+    <ul class="flex gap-5">
+        <li class="hover:text-reddish"><a>Download Now</a></li>
+        <li class="hover:text-reddish"><a>License</a></li>
+    </ul>
+    <ul class="flex gap-5">
+        <li class="hover:text-reddish"><a>About</a></li>
+        <li class="hover:text-reddish"><a>Feaures</a></li>
+        <li class="hover:text-reddish"><a>Pricing</a></li>
+        <li class="hover:text-reddish"><a>Careers</a></li>
+        <li class="hover:text-reddish"><a>Help</a></li>
+        <li class="hover:text-reddish"><a>Privacy Policy</a></li>
+    </ul>
+    <p class="text-sm pt-7">© 2020 bike. All rights reserved</p>
+  </aside>
+  <nav>
+    <h6 class="footer-title text-lg">Get the App</h6>
+    <div class="grid grid-cols-1 gap-5 w-36">
+      <a><img src="./images/others/android.png" alt=""></a>
+      <a><img src="./images/others/ios.png" alt=""></a>
+    </div>
+  </nav>
+</div>
+    </footer>
 </body>
 
 </html>
